--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,10 @@
 }
 
 :root {
-  --color-primary: rgb(51, 51, 51);
-  --color-secondary: #f6f6f6;
-  --font-family: system-ui;
+  background-color: rgb(56, 229, 77);
+  --color-primary: rgb(33, 146, 255);
+  --color-secondary: rgb(156, 255, 46);
+  --font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
 body {
@@ -23,7 +24,8 @@ body {
 
 main {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
   gap: 10px;
 }
 
