--- a/components/nav-button/nav-button.css
+++ b/components/nav-button/nav-button.css
@@ -1,8 +1,8 @@
 .button {
-  border: none;
-  background-color: rgb(253, 255, 0);
+  border: 2px solid rgb(253, 255, 0);
+  background-color: var(--color-secondary);
 }
 
 .button:hover {
-  background-color: var(--color-secondary);
+  background-color: rgb(253, 255, 0);
 }
