--- a/components/nav-button/nav-button.css
+++ b/components/nav-button/nav-button.css
@@ -1,4 +1,6 @@
 .button {
+  color: var(--color-primary);
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
   border: 2px solid rgb(253, 255, 0);
   background-color: var(--color-secondary);
 }
