--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@
   background-color: rgb(56, 229, 77);
   --color-primary: rgb(33, 146, 255);
   --color-secondary: rgb(156, 255, 46);
+  --color-tertiary: rgb(253, 255, 0);
   --font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
