--- a/components/nav-button/nav-button.css
+++ b/components/nav-button/nav-button.css
@@ -1,6 +1,6 @@
 .button {
   color: var(--color-primary);
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-family: var(--font-family);
   border: 2px solid var(--color-tertiary);
   background-color: var(--color-secondary);
 }
