--- a/components/search-bar/search-bar.css
+++ b/components/search-bar/search-bar.css
@@ -18,7 +18,7 @@
 
 ::placeholder {
   color: var(--color-primary);
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-family: var(--font-family);
 }
 
 .search-bar__button {
