change color of disabled button on hover

--- a/components/nav-button/nav-button.css
+++ b/components/nav-button/nav-button.css
@@ -8,3 +8,7 @@
 .button:hover {
   background-color: var(--color-tertiary);
 }
+
+.button:disabled:hover {
+  background-color: var(--color-secondary);
+}
