--- a/components/search-bar/search-bar.css
+++ b/components/search-bar/search-bar.css
@@ -35,12 +35,12 @@
 .search-bar__input:focus {
   outline: none;
 }
-
+/* tried to make background-color NOT turn grey after input, but it does not work
 .search-bar__input:active {
   background-color: var(--color-tertiary);
   color: var(--color-primary);
 }
-
+*/
 .search-bar__icon {
   width: 20px;
   filter: invert(75%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(75%) contrast(90%); 
