add transition of background-color to buttons

--- a/components/nav-button/nav-button.css
+++ b/components/nav-button/nav-button.css
@@ -3,6 +3,7 @@
   font-family: var(--font-family);
   border: 2px solid var(--color-tertiary);
   background-color: var(--color-secondary);
+  transition: background-color 0.25s 100ms;
 }
 
 .button:hover {
