--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ body {
   font-family: var(--font-family);
   color: var(--color-primary);
   padding: 20px;
+  background-image: url(/assets/background-image.png);
 }
 
 main {
