change grid-template-columns to 1fr instead of 100px for media max-width 600px

--- a/components/nav-pagination/nav-pagination.css
+++ b/components/nav-pagination/nav-pagination.css
@@ -1,7 +1,7 @@
 .navigation {
   height: 30px;
   display: grid;
-  justify-content: space-between;
+  justify-content: space-around;
   grid-template-columns: 100px 100px 100px;
 }
 
@@ -10,4 +10,10 @@
   place-items: center;
   border: 2px solid var(--color-tertiary);
   background-color: var(--color-secondary);
+}
+
+@media (max-width: 600px) {
+  .navigation {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
