--- a/components/nav-button/nav-button.css
+++ b/components/nav-button/nav-button.css
@@ -1,6 +1,7 @@
 .button {
   color: var(--color-primary);
   font-family: var(--font-family);
+  font-size: 16px;
   border: 2px solid var(--color-secondary);
   background-color: var(--color-tertiary);
   transition: background-color 0.25s 100ms;
@@ -8,10 +9,16 @@
 
 .button:hover {
   background-color: var(--color-secondary);
-  transform: scale(1.1,1.1);
   border-radius: 50%; 
 }
 
 .button:disabled:hover {
-  background-color: var(--color-secondary);
+  background-color: var(--color-tertiary);
+  border-radius: 0%;
+}
+
+@media (max-width: 600px) {
+  .button {
+    font-size: 14px;
+  }
 }
