--- a/components/nav-pagination/nav-pagination.css
+++ b/components/nav-pagination/nav-pagination.css
@@ -10,7 +10,23 @@
   place-items: center;
   border: 2px solid var(--color-tertiary);
   background-color: var(--color-secondary);
+  transition: transform 0.6s ease; 
 }
+
+@keyframes rotatePagination {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(2turn);
+  }
+}
+
+
+.rotate {
+  animation: rotatePagination 0.6s ease;
+}
+
 
 @media (max-width: 600px) {
   .navigation {
