minor adjustments at search-bar-button and card-image-container

--- a/components/card/card.css
+++ b/components/card/card.css
@@ -9,6 +9,11 @@
   margin-bottom: 10px;
   border: 2px solid var(--color-tertiary);
 }
+
+.card__image-container {
+  width: 300px;
+}
+
 .card {
   width: 300px;
   background-color: var(--color-secondary);
