--- a/components/nav-button/nav-button.css
+++ b/components/nav-button/nav-button.css
@@ -4,12 +4,13 @@
   font-size: 16px;
   border: 2px solid var(--color-secondary);
   background-color: var(--color-tertiary);
-  transition: background-color 0.25s 100ms;
+  transition: background-color 0.25s 100ms, transform 0.6s ease;
 }
 
 .button:hover {
   background-color: var(--color-secondary);
   border-radius: 50%; 
+  transform: rotate(2turn);
 }
 
 .button:disabled:hover {
