--- a/components/nav-pagination/nav-pagination.css
+++ b/components/nav-pagination/nav-pagination.css
@@ -2,7 +2,12 @@
   height: 30px;
   display: grid;
   justify-content: space-evenly;
-  grid-template-columns: 100px 100px 100px;
+  grid-template-columns: 100px auto 100px;
+  position: fixed;
+  left: 50%;               
+  transform: translateX(-50%);
+  bottom: 20px;
+  z-index: 1000;
 }
 
 .navigation__pagination {
@@ -11,6 +16,9 @@
   border: 2px solid var(--color-tertiary);
   background-color: var(--color-secondary);
   transition: transform 0.6s ease; 
+  margin: 0 20px;
+  border-radius: 50%;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); 
 }
 
 @keyframes rotatePagination {
@@ -22,14 +30,14 @@
   }
 }
 
-
 .rotate {
   animation: rotatePagination 0.6s ease;
 }
 
-
 @media (max-width: 600px) {
   .navigation {
     grid-template-columns: 1fr 1fr 1fr;
+    bottom: 10px;
+    width: 100%;
   }
 }
