--- a/components/search-bar/search-bar.css
+++ b/components/search-bar/search-bar.css
@@ -1,16 +1,19 @@
 .search-bar-container {
   width: 280px;
+  height: 35px;
+  display: flex;
+  justify-content: center;
   position: sticky;
   top: 0;
   z-index: 1000;
   padding: 10px 0;
+  border: 2px solid var(--color-tertiary);
+  border-radius: 50%; 
+  background-color: var(--color-secondary);
 }
 
 .search-bar {
-  border: 2px solid var(--color-tertiary);
-  border-radius: 50%; 
   padding: 5px;
-  background-color: var(--color-secondary);
   display: flex;
   align-items: center;
   justify-content: center;
