--- a/components/show-all-button/show-all-button.css
+++ b/components/show-all-button/show-all-button.css
@@ -16,7 +16,7 @@
     align-items: center;
     position: sticky;
     top: 0;
-    z-index: 1000;
+    z-index: 999;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); 
   }
   
@@ -33,5 +33,6 @@
   @media (max-width: 600px) {
     .show-all-button {
     font-size: 14px;
+    top: 40px;
 }
   }
