--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
   font-family: var(--font-family);
   color: var(--color-primary);
   padding: 20px;
-  background-image: url(/assets/background-image.png);
+  background-image: url(./assets/background-image.png);
 }
 
 main {
