add min-height 100 to viewport to make background-image fill the whole screen when no cards are shown

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ body {
   color: var(--color-primary);
   padding: 20px;
   background-image: url(./assets/background-image.png);
+  min-height: 100vh;
 }
 
 main {
